--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -1,12 +1,11 @@
-div.when {
-  margin: 5px 0;
-  background-color: #f7f7f7;
-  border: 1px solid #d3d3d3;
-  border-radius: 3px;
+.lst-it div.detail {
   padding: 3px;
-  width: calc(100% - 10px);
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  margin: 0 3px 3px 0;
+  background-color:rgb(239, 239, 239);
 }
-.lst-it:nth-child(even) div.when {
+.lst-it:nth-child(even) div.detail {
   background-color: #fff;
 }
 .fnd #banner,
