--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -18,6 +18,9 @@ div.route .adp-placemark * {
 .ol-overlaycontainer-stopevent .srch input {
   border: 1px solid #803D8D;
 }
+.lst-it:nth-child(even) .dtl .clps .content {
+  background-color: #fff;
+}
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
     display: block;
