--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -1,3 +1,6 @@
+.lst-it:nth-child(even) .dtl .clps .content {
+  background-color: #fff;
+}
 .fnd #banner,
 .fnd .splash .dia,
 .tabs>.btns button.btn.active,
@@ -18,8 +21,13 @@ div.route .adp-placemark * {
 .ol-overlaycontainer-stopevent .srch input {
   border: 1px solid #803D8D;
 }
-.lst-it:nth-child(even) .dtl .clps .content {
-  background-color: #fff;
+.btn-rnd {
+  background-color: rgba(128,61,141,.55);
+}
+#mode td .btn-sq.active, .btn-sq:hover {
+  background-color: rgba(128,61,141,.7);
+  border: 1px solid #803D8D;
+  box-shadow: 1px 1px 3px #803D8D;
 }
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
