--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -29,6 +29,22 @@ div.route .adp-placemark * {
   border: 1px solid #803D8D;
   box-shadow: 1px 1px 3px #803D8D;
 }
+.splash .dia-msg a.btn {
+  display: block;
+  color: #000;
+  text-align: center;
+  text-transform: none;
+}
+.fnd .splash .dia a.btn-yes,
+.fnd .splash .dia a.btn-no {
+  width: calc(100% - 6px);
+}
+.fnd .splash .dia {
+  top: 36px;
+}
+.splash p {
+  margin: 5px 0;
+}
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
     display: block;
