scrollable splash dialog for mobile landscape view

--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -41,6 +41,8 @@ div.route .adp-placemark * {
 }
 .fnd .splash .dia {
   top: 36px;
+  max-height: calc(100% - 55px);
+  overflow-y: auto;
 }
 .splash p {
   margin: 5px 0;
