Next phase of updates
•	Update Title to "COVID-19 Diagnostic Testing Sites
•	Remove Walk up, Drive thru, NYCHA filters
•	Add Appointment_only filter
•	Change format of operational hours to table view listing hours for each day of week
•	Remove walk up, drive-thru, nycha prioritization, prioritization criteria from details panel
•	Add phone, appointment info, additional info, url

--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -69,3 +69,12 @@ div.route .adp-placemark * {
   width: 129px;
   }
 }
+table, th, td {
+  border: 1px solid black;
+}
+table {
+  margin: auto 0;
+}
+.op-hours {
+  padding-top: 5px;
+}
