--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -1,39 +1,52 @@
+.ol-rotate-reset {
+  display: none;
+}
+.lst-it:nth-child(even) {
+  background-color: var(--color-button-translucent);
+}
 .lst-it:nth-child(even) .dtl .clps .content {
-  background-color: #fff;
+  background-color: var(--color-light);
 }
-.fnd #banner,
-.fnd .splash .dia,
-.tabs>.btns button.btn.active,
-.btn-sq,
-#back-to-map,
-.srch-ctl ul li:hover,
-.btn-rnd:hover,
-#back-to-map.btn:before,
-#back-to-map.btn:hover:before,
-div.route .adp-placemark, 
-div.route .adp-placemark * {
-  background-color: #803D8D;
+.lst-it:nth-child(odd) .dtl .clps .content {
+  background-color: var(--color-button-translucent);
 }
-#back-to-map.btn:hover:before {
-  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2214px%22%20height%3D%2214px%22%3E%3Cpolygon%20points%3D%2210.596%2C11.949%205.646%2C7%2010.596%2C2.05%208.475%2C-0.071%201.404%2C7%208.475%2C14.07%20%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E");
-  border: 1px solid #fff;
+.btn-sq {
+  background-color: var(--color-dark);
 }
-.ol-overlaycontainer-stopevent .srch input {
-  border: 1px solid #803D8D;
+.btn-sq:hover {
+  background-color: var(--color-button);
 }
-.btn-rnd {
-  background-color: rgba(128,61,141,.55);
+.btn:hover {
+  color: var(--color-light);
 }
-#mode td .btn-sq.active, .btn-sq:hover {
-  background-color: rgba(128,61,141,.7);
-  border: 1px solid #803D8D;
-  box-shadow: 1px 1px 3px #803D8D;
+.btn.map:hover {
+  background-image: var(--map-icon-light);
+}
+.btn.dir:hover {
+  background-image: var(--directions-icon-light);
+}
+.btn.phone:hover {
+  background-image: var(--phone-icon-light);
+}
+.btn.web:hover {
+  background-image: var(--web-icon-light);
 }
 .splash .dia-msg a.btn {
   display: block;
-  color: #000;
+  color: var(--color-dark);
   text-align: center;
-  text-transform: none;
+  text-transform: none;  
+}
+.splash .btn {
+  background-color: var(--color-button);
+}
+.splash .btn:hover,
+.splash .dia-msg a.btn:hover {
+  background-color: #F68C1E;
+  color: var(--color-light);
+}
+.fnd .splash .dia a.btn-yes:hover {
+  background-image: var(--speaker-icon-light);
 }
 .fnd .splash .dia a.btn-yes,
 .fnd .splash .dia a.btn-no {
@@ -61,11 +74,12 @@ div.route .adp-placemark * {
 .op-hours {
   padding-top: 5px;
 }
+#mode td .btn-sq.active {
+  background-color: #F68C1E;
+}
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
     display: block;
-    border-bottom: 1px solid #803D8D;
-    background-color: #803D8D;
     width: 100%;
   }
   .fnd .splash .dia {
@@ -76,10 +90,9 @@ div.route .adp-placemark * {
 }
 @media only screen and (max-width : 400px) {
   .fnd #banner * {
-  font-size: 17px;
-  color: #fff;
-  line-height: 17px;
-  margin-top: -2px;
-  width: 129px;
+    font-size: 17px;
+    line-height: 17px;
+    margin-top: -2px;
+    width: 129px;
   }
 }
