--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -77,6 +77,12 @@
 #mode td .btn-sq.active {
   background-color: #F68C1E;
 }
+.facility.no-website a.btn-ico.phone {
+  width: calc(100% - 35px);
+}
+.facility.no-phone a.btn-ico.web {
+  width: calc(100% - 35px);
+}
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
     display: block;
