--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -86,6 +86,10 @@
 .fnd.translated .splash .btn:hover * {
   color: var(--color-light);
 }
+.chc-chc:hover, .chc-chc:hover * {
+  background-color: var(--color-dark);
+  color: white;
+}
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
     display: block;
