--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -85,6 +85,12 @@
   background-color: var(--color-dark);
   color: white;
 }
+.translated-rtl .clps .content {
+  margin-right: 3px;
+}
+.translated-rtl .pop>.content .name {
+  padding-right: initial;
+}
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
     display: block;
