--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -91,6 +91,12 @@
 .translated-rtl .pop>.content .name {
   padding-right: initial;
 }
+.list .dtl .hrs {
+  width: 45%;
+}
+.pop .dtl .hrs {
+  width: 55%;
+}
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
     display: block;
