--- a/src/css/covid-testing.css
+++ b/src/css/covid-testing.css
@@ -111,6 +111,25 @@
 .fnd .splash .dia {
   height: 250px;
 }
+.facility.acc:before,
+label[for="chc-chc-0"]:before {
+  display: block;
+  content: ' ';
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background-size: 14px;
+  background-image: url("../img/acc.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--color-dark);
+  float: left;
+  margin: -3px 3px;
+}
+.translated-rtl .facility.acc:before,
+.translated-rtl label[for="chc-chc-0"]:before {
+  float: right;
+}
 @media only screen and (max-width: 750px), screen and (max-device-height: 350px) {
   .fnd .lst-srch .srch {
     display: block;
