--- a/src/css/monorail.css
+++ b/src/css/monorail.css
@@ -160,7 +160,7 @@
 
 
 .fnd.monorail .clps>button.btn:before {
-  margin: 0 5px 0 -10px;
+  margin: 3px 5px 0 -10px;
 }
 
 .fnd.monorail label[for=chc-chc-0]:before {
